<resources>
    <string name="app_name">SAM</string>
    <string name="authTitle">Factors</string>
    <string name="authSubTitle">These are the three factors</string>
    <string name="auth1">Authentication Factor 1</string>
    <string name="auth2">Authentication Factor 2</string>
    <string name="auth3">Authentication Factor 3</string>
    <string name="toggleF">False</string>
    <string name="setup_lock_screen">
        Secure lock screen hasn\'t set been up.\n
        Go to \'Settings -> Security -> Fingerprint\' to set up a fingerprint
    </string>
    <string name="register_fingerprint">
        Go to \'Settings -> Security -> Fingerprint\' and register at least one fingerprint
    </string>
    <string name="finger_icon">Fingerprint Icon</string>
    <string name="enterPassword">Enter password:</string>
    <string name="savePassword">Save</string>
    <string name="checkPassword">Check</string>
    <string name="lightButton">Light</string>
    <string name="motionButton">Motion</string>
    <string name="soundButton">Sound</string>
    <string name="fingerprintStep1">Scan your fingerprint</string>
    <string name="fingerprintStep2">Authentication succeeded</string>
    <string name="confirmFingerprint">Confirm fingerprint</string>
    <string name="touchSensor">Touch Sensor</string>
    <string name="authenticationSuccess">Success</string>
    <string name="authenticationFailure">Failure</string>
</resources>
